[gd_scene load_steps=5 format=3 uid="uid://1qbutp7j5oji"]

[ext_resource type="Script" uid="uid://cucubw6abjha7" path="res://src/hub/party_menu.gd" id="1_svdj7"]
[ext_resource type="PackedScene" uid="uid://b7iret6dna06c" path="res://src/hub/skill_tree_panel.tscn" id="3_nv3kq"]
[ext_resource type="PackedScene" uid="uid://5rdfx772oesw" path="res://src/hub/inventory_panel.tscn" id="4_wyrqa"]
[ext_resource type="PackedScene" uid="uid://c3sqmfckgaala" path="res://src/hub/hero_panel.tscn" id="5_3v1r5"]

[node name="PartyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svdj7")
hero_panel_scene = ExtResource("5_3v1r5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9607843)

[node name="HeroList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 63.0
offset_right = -1588.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="Control" parent="."]
anchors_preset = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 319.0
offset_bottom = 55.0

[node name="ModeTabs" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Skills" type="Button" parent="Header/ModeTabs"]
layout_mode = 2
text = "SKILLS"

[node name="Inventory" type="Button" parent="Header/ModeTabs"]
layout_mode = 2
text = "INVENTORY"

[node name="BackBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 31.0
offset_top = 403.0
offset_right = 331.0
offset_bottom = 463.0
grow_vertical = 2
text = "<BACK"

[node name="Content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -619.0
offset_top = -532.0
offset_right = 952.0
offset_bottom = 532.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillTreePanel" parent="Content" instance=ExtResource("3_nv3kq")]
layout_mode = 1

[node name="InventoryPanel" parent="Content" instance=ExtResource("4_wyrqa")]
layout_mode = 1

[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
